--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>FaerCast updates</title>
-</head>
-<body>
-    <div>
-        <h1>FaerCast Updates</h1>
+{% extends 'blog/base.html' %}
+{% block content %}
+{% for post in posts %}
+    <div class="post">
+        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+        <div class="date">
+            <p>Опубликовано: {{ post.published_date }}</p>
+        </div>
+        <p>{{ post.text|linebreaksbr }}</p>
     </div>
-    <div>
-        {% for post in posts %}
-            <div>
-                <h1>{{ post.title }}</h1>
-                <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-        {% endfor %}
-    </div>
-</body>
-</html>
+{% endfor %}
+{% endblock %}
